Your commit message

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
             <id>papermc-repo</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
+    
+        <!-- PlaceholderAPI Repository -->
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+    
+        <!-- FastAsyncWorldEdit Repository -->
+        <repository>
+            <id>intellectualsites-snapshots</id>
+            <url>https://mvn.intellectualsites.com/content/repositories/snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
